# model-train-job-deploy

./: DockerFile  README.md  dtree_config.yaml  knn_config.yaml  pyproject.toml
.github/workflows/: ci.yaml
classification_pipeline/: __init__.py  config.yaml  data.py  features.py  model.py  model_params.py  pipeline.py  run.py  utils.py
classification_pipeline/tests/: test_pipeline.py
