[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "classification-pipeline"
version = "0.1.0"
description = "Framework on ML classification to learn and practice design patterns and more"
authors = [{name = "Shruti Iyyer", email = "you@example.com"}]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "pydantic>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["classification_pipeline"]